--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -36,9 +36,9 @@
   },
   "login": {
     "title": "Hệ thống Quản lý Câu lạc bộ",
-    "subtitle": "Đại học FPT",
+    "subtitle": "Đại học Đại học Điện Lực Hà Nội",
     "description": "Kết nối sinh viên, quản lý hoạt động và phát triển cộng đồng câu lạc bộ",
-    "instruction": "Sử dụng tài khoản Google <b>@fpt.edu.vn</b> của bạn để truy cập hệ thống",
+    "instruction": "Sử dụng tài khoản Google <b>@epu.edu.vn</b> của bạn để truy cập hệ thống",
     "loginFailed": "Đăng nhập thất bại:",
     "loginError": "Có lỗi xảy ra khi đăng nhập"
   }
